tests/spec/compile-fail/011_array_slice_field.zn
// category: compile-fail
// profile: freestanding
// purpose: ArraySlice cannot be stored in struct fields

module tests.fail.arraySliceField;

struct Packet {
    bytes: ArraySlice<U8>, // expected-error: ArraySlice fields are not allowed
}

struct PacketList {
    packets: Array<ArraySlice<U8>>, // expected-error: ArraySlice cannot be stored inside Array fields
}
